--- a/WebContent/count_abc.html
+++ b/WebContent/count_abc.html
@@ -54,13 +54,19 @@ for(var i=0;i<str.length;i++){
 for(var key in obj){
 	console.log(obj[key].value+":"+obj[key].count);
 }
+
+for(var key in obj){
+	console.log(obj[key]);
+}
+
+console.log(obj["a"]);
 //计算字母出现次数-结束
 
 
 var i=110;
 $(function(){
 	window.setInterval(function(){
-		i--;
+		//i--;
 		$(".div1").html(i);
 	}, 100)
 	
