--- a/WebContent/autoheight.html
+++ b/WebContent/autoheight.html
@@ -19,13 +19,15 @@ div{
 </body>
 <script>
 $(function(){
-	window.onresize = function(){
+	
 		var s = $("div").height();
 		console.log(s);
 		var h = $(window).height();
 		console.log(h);
+	window.onresize = function(){
 		$("div").height(h-20);
 	}
+	$("div").height(h);
 })
 </script>
 </html>
