--- a/WebContent/360-css旋转/test2.html
+++ b/WebContent/360-css旋转/test2.html
@@ -3,38 +3,81 @@
 <head>
 <meta charset="utf-8"> 
 <title>(runoob.com)</title> 
+<script type="text/javascript" src="../jquery.js"></script>
 <style> 
 div
 {
-    width:100px;
-    height:100px;
-    background:red;
-    position:relative;
-    animation:mymove 3s;
-    animation-iteration-count:2;
-    animation-fill-mode:forwards;
+margin:30px;
+width:20px;
+height:10px;
+background-color:yellow;
+/* Rotate div */
+/* transform:rotate(9deg);
+-ms-transform:rotate(9deg); 
+-moz-transform:rotate(9deg);
+-webkit-transform:rotate(9deg)
+-o-transform:rotate(9deg); */
 
-    /* Safari 和 Chrome */
-    -webkit-animation:mymove 3s;
-    -webkit-animation-iteration-count:2;
-    -webkit-animation-fill-mode:forwards;
+/* transition: transform 2s; */
+
 }
 
-@keyframes mymove
-{
-    from {top:0px;}
-    to {top:200px;}
-}
+.zero{
+transform:rotate(9deg);
 
-@-webkit-keyframes mymove /* Safari 和 Chrome */
-{
-    from {top:0px;}
-    to {top:200px;}
 }
+.one{
+	/* Rotate div */
+	transform:rotate(999deg);
+	
+} 
 </style>
 </head>
 <body>
 <p><strong></strong>Internet Explorer 9 及其之前的版本不支持 animation-fill-mode 属性。</p>
-<div></div>
+<div class="zero"></div>
+<button>aaaa</button>
 </body>
+<script>
+$(function(){
+	$("div").remove();
+	style="transition: transform 2s; transform: rotate(1999deg);"
+	var dv = '<div style="transition: transform 2s; transform: rotate(0deg);"></div>';
+	$("body").append(dv);
+})
+$("button").click(function(){
+		//$("div").css("transform","rotate(999deg)");
+		//$("div").removeClass("zero").addClass("one");
+		
+/* 		if($("div").hasClass("one")){
+			$("div").removeClass("one").addClass("zero");
+		}else{
+			$("div").removeClass("zero").addClass("one");
+		} 		*/
+		//$("div").removeAttr("transform");
+		
+		 $("div").css("transition","transform 0s");
+		$("div").css("transform","rotate(0deg)");
+		console.log("a");
+		$("div").css("transition","transform 2s");
+		if($("div").hasClass("one")){
+				$("div").removeClass("one").addClass("zero");
+			$("div").css("transform","rotate(3600deg)");
+			
+		}else{
+				$("div").removeClass("zero").addClass("one");
+			$("div").css("transform","rotate(1800deg)");
+		} 	
+		$("div").css("transition","transform 2s"); 
+		
+		/*  $("div").remove();
+		var div = "<div></div>"
+		
+		$(div).css("transition","transform 0s");
+		$(div).css("transform","rotate(0deg)");
+		$(div).css("transition","transform 2s");
+		$(div).css("transform","rotate(991deg)"); 
+		$("body").append(div); */
+	})
+</script>
 </html>
