--- a/WebContent/css-autoheight/auto-height.html
+++ b/WebContent/css-autoheight/auto-height.html
@@ -32,6 +32,16 @@
 	border-radius:3px;
 }
 
+/* 上下居中 */
+.left-del{
+	position: absolute;
+	width:50px;
+	height:50px;
+	top:50%;
+	margin-top:-25px;
+	background: #ff0000;
+	color:#ffffff;
+}
 </style>
 </head>
 <body>
@@ -44,6 +54,9 @@
 		<div class="wrapper">
 			
 		</div>
+	</div>
+	<div class="left-del">
+		左<
 	</div>
 </body>
 <script>
