--- a/WebContent/css-autoheight/auto-height.html
+++ b/WebContent/css-autoheight/auto-height.html
@@ -5,13 +5,16 @@
 <title>auto-height</title>
 <script type="text/javascript" src="../jquery.js"></script>
 <style>
+body{
+	background: url(poster.png) no-repeat center;
+}
 .left{
 	position:absolute;
 	width:130px;
 	left:0px;
 	top:0px;
 	bottom:0px;
-	background: #f0f0f0;
+	/* background: #f0f0f0; */
 	padding:16px 0px;
 }
 .left-wap{
