--- a/WebContent/css-autoheight/auto-height.html
+++ b/WebContent/css-autoheight/auto-height.html
@@ -37,13 +37,15 @@ body{
 .alert-box{
 	display:none;
 	position: fixed;
-	width:200px;
 	height:100px;
 	background: #ffff00;
 	top:50%;
 	left:50%;
-	margin-left:-100px;
 	margin-top:-50px;
+/* 	width:200px;
+	margin-left:-100px; */
+	width:30%;
+	margin-left:-15%;
 }
 
 
@@ -72,7 +74,7 @@ body{
 		</div>
 	</div>
 	<div class="left-del">
-		左<
+		left
 	</div>
 	<div class="alert-box">
 		alert
