--- a/WebContent/count_abc.html
+++ b/WebContent/count_abc.html
@@ -58,7 +58,7 @@ for(var key in obj){
 for(var key in obj){
 	console.log(obj[key]);
 }
-
+console.dir(obj);
 console.log(obj["a"]);
 //计算字母出现次数-结束
 
