--- a/WebContent/css-autoheight/auto-height.html
+++ b/WebContent/css-autoheight/auto-height.html
@@ -5,6 +5,10 @@
 <title>auto-height</title>
 <script type="text/javascript" src="../jquery.js"></script>
 <style>
+*{
+margin:0px;
+padding:0px;
+}
 body{
 	background: url(poster.png) no-repeat center;
 }
