--- a/WebContent/system/login.html
+++ b/WebContent/system/login.html
@@ -87,8 +87,9 @@
 		
 	}
 	AOS.init({
-	  duration: 600,
-	   delay: 100,
+	  duration: 800,
+	  easing: 'ease-out-back',
+	  delay: 100,
 	})
 
 </script>
