--- a/WebContent/system/html/main.html
+++ b/WebContent/system/html/main.html
@@ -10,50 +10,131 @@
 		<script src="../js/jquery.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
-		<!--logo 开始-->
+		<!--top 开始-->
 		<div class="login_logo">
 			<div class="login_logo_img_div"><img src="../img/logo.png" alt="" /></div>
+			
+			<!--上边导航开始-->
+			<ul class="headnva">
+				<li><i class="fa fa-window-restore" style="font-size:48px"></i><br/>1.测试业务管理</li>
+				<li><i class="fa fa-pie-chart" style="font-size:48px"></i><br/>2.测试数据管理</li>
+			</ul>
+			<!--上边导航结束-->
+			
+			
+			<!--user button start-->
+			<ul class="headlink_right_ul fr">
+				<li class="fl"><i class="fa fa-user-circle" style="font-size:20px"></i>你好,111</li>
+				<li class="fl logout"><i class="fa fa-power-off" style="font-size:20px"></i>退出</li>
+			</ul>
+			<!--user button end-->
 		</div>
-		<!--logo 结束-->
+		<!--top 结束-->
+		
+		
+		
+		
 		
 		<!--左边导航开始-->
 		<div class="nav">
-			<dl class="yin">
-				<dt>测试业务管理1</dt><i class="fa fa-angle-down" style="font-size:24px"></i>
-				<dd>测试业务管理2</dd>
-				<dd>测试业务管理3</dd>
-				<dd>测试业务管理4</dd>
-			</dl>
-			<dl class="yin">
-				<dt>测试业务1</dt><i class="fa fa-angle-down" style="font-size:24px"></i>
-				<dd>测试业务2</dd>
-				<dd>测试业务3</dd>
-				<dd>测试业务4</dd>
-			</dl>
-			<dl class="yin">
-				<dt>测试业务1</dt><i class="fa fa-angle-down" style="font-size:24px"></i>
-				<dd>测试业务2</dd>
-				<dd>测试业务3</dd>
-				<dd>测试业务4</dd>
-			</dl>
+			<div class="left_menu">
+				<dl class="yin">
+					<dt>2.1.权限管理<i class="fa fa-angle-down" style="font-size:24px"></i></dt>
+					<dd><a href="javascript:;" _link="iframe2.html">2.1权限管理</a></dd>
+				</dl>
+				<dl class="yin">
+					<dt>2.2测试区测试资源管理<i class="fa fa-angle-down" style="font-size:24px"></i></dt>
+					<dd><a href="javascript:;" _link="iframe1.html">2.2.1.测试设备管理</a></dd>
+					<dd><a href="javascript:;" _link="iframe2.html">2.2.2.易耗测试材料管理</a></dd>
+					<dd><a href="javascript:;" _link="iframe3.html">2.2.3.s专业测试人员资源</a></dd>
+					<dd><a href="javascript:;" _link="iframe4.html">2.2.4.测试服务车辆管理</a></dd>
+				</dl>
+				<dl class="yin">
+					<dt>2.3.客户信息管理<i class="fa fa-angle-down" style="font-size:24px"></i></dt>
+					<dd><a href="javascript:;" _link="iframe2.html">2.3.客户信息管理</a></dd>
+				</dl>
+				<dl class="yin">
+					<dt>2.4.测试业务管理<i class="fa fa-angle-down" style="font-size:24px"></i></dt>
+					<dd><a href="javascript:;" _link="iframe2.html">2.4.测试业务管理</a></dd>
+				</dl>
+			</div>
+			
+			
+			
+			<div class="left_menu" style="display:none">
+				<dl class="yin">
+					<dt>1.主视图功能<i class="fa fa-angle-down" style="font-size:24px"></i></dt>
+					<dd><a href="javascript:;" _link="iframe1.html">3.1.1.GIS基础功能</a></dd>
+					<dd><a href="javascript:;" _link="iframe2.html">3.1.2.园区基础设施显示</a></dd>
+					<dd><a href="javascript:;" _link="iframe2.html">3.1.3.信号灯信息显示</a></dd>
+					<dd><a href="javascript:;" _link="iframe3.html">3.1.4.雷达、摄像头信息显示</a></dd>
+					<dd><a href="javascript:;" _link="iframe4.html">3.1.5.路侧网联设备信息显示</a></dd>
+				</dl>
+				<dl class="yin">
+					<dt>2.测试场景展示<i class="fa fa-angle-down" style="font-size:24px"></i></dt>
+					<dd><a href="javascript:;" _link="iframe1.html">3.2.1.测试场景展示</a></dd>
+				</dl>
+				<dl class="yin">
+					<dt>3.大数据统计图表<i class="fa fa-angle-down" style="font-size:24px"></i></dt>
+					<dd>3.3.1.基础统计信息板块</dd>
+					<dd>3.3.2.网联交互统计信息板块</dd>
+					<dd>3.3.3.应用场景统计信息板块</dd>
+				</dl>
+			</div>
+			
 		</div>
 		<!--左边导航结束-->
-		<div></div>
+		<div class="rightmain">
+			 <iframe id="main" name="main" frameborder="0" scrolling="yes" src="" width="100%" height="100%"></iframe>
+		</div>
 		
 	</body>
 	<script type="text/javascript">
 	$(function(){
-		$(".nav dt").on("click",function(){
-			if($(this).next("i").hasClass("fa-angle-down")){
+		
+		//change   nav -left  start
+		$(".nav").on("click","dt",function(){
+			if($(this).find("i").hasClass("fa-angle-down")){
 				$(".nav i").removeClass("fa-angle-up").addClass("fa-angle-down");
-				$(".nav dd").slideUp();
-				$(this).next("i").removeClass("fa-angle-down").addClass("fa-angle-up");
-				$(this).parent().find("dd").slideDown();
+				$(".nav dd").slideUp(100);
+				$(this).find("i").removeClass("fa-angle-down").addClass("fa-angle-up");
+				$(this).parent().find("dd").slideDown(100);
+				
+				$(".nav dt").removeClass("bgblack");
+				$(this).addClass("bgblack");
 			}else{
-				$(".nav dd").slideUp();
-				$(this).next("i").removeClass("fa-angle-up").addClass("fa-angle-down");
+				$(".nav dd").slideUp(100);
+				$(this).find("i").removeClass("fa-angle-up").addClass("fa-angle-down");
 			}
 		});
+		//change   nav -left  end
+		
+		
+		//link
+		$(".nav").on("click","dd",function(){
+			$(".nav dd").removeClass("bgf0f0f0");
+			$(this).addClass("bgf0f0f0");
+			
+			var _link = $(this).find("a").attr("_link");
+			$("#main").attr("src",_link);
+		})
+		
+		//change nva -top	start
+		$(".headnva li").on("click",function(){
+			console.log("a");
+			$(".headnva li").width(150);
+			$(this).width(200);
+			
+			var index = $(this).index();
+			$(".left_menu").hide();
+			$(".left_menu").eq(index).show();
+		})
+		//change nva -top  end
+		
+		$(".logout").click(function(){
+			window.location.href="../login.html";
+		})
+		
 	})
 	</script>
 </html>
