--- a/WebContent/system/html/main.html
+++ b/WebContent/system/html/main.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="../css/reset.css" />
 		<link rel="stylesheet" href="../css/font-awesome.css" />
 		<link rel="stylesheet" href="../css/main.css" />
-		<script src="../js/jquery.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../js/jquery-3.3.1.min.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
 		<!--top 开始-->
@@ -20,7 +20,6 @@
 				<li><i class="fa fa-pie-chart" style="font-size:48px"></i><br/>2.测试数据管理</li>
 			</ul>
 			<!--上边导航结束-->
-			
 			
 			<!--user button start-->
 			<ul class="headlink_right_ul fr">
@@ -40,22 +39,22 @@
 			<div class="left_menu">
 				<dl class="yin">
 					<dt>2.1.权限管理<i class="fa fa-angle-down" style="font-size:24px"></i></dt>
-					<dd><a href="javascript:;" _link="iframe2.html">2.1权限管理</a></dd>
+					<li><a href="javascript:;" _link="iframe2.html">2.1权限管理</a></li>
 				</dl>
 				<dl class="yin">
 					<dt>2.2测试区测试资源管理<i class="fa fa-angle-down" style="font-size:24px"></i></dt>
-					<dd><a href="javascript:;" _link="iframe1.html">2.2.1.测试设备管理</a></dd>
-					<dd><a href="javascript:;" _link="iframe2.html">2.2.2.易耗测试材料管理</a></dd>
-					<dd><a href="javascript:;" _link="iframe3.html">2.2.3.s专业测试人员资源</a></dd>
-					<dd><a href="javascript:;" _link="iframe4.html">2.2.4.测试服务车辆管理</a></dd>
+					<li><a href="javascript:;" _link="iframe1.html">2.2.1.测试设备管理</a></li>
+					<li><a href="javascript:;" _link="iframe2.html">2.2.2.易耗测试材料管理</a></li>
+					<li><a href="javascript:;" _link="iframe3.html">2.2.3.s专业测试人员资源</a></li>
+					<li><a href="javascript:;" _link="iframe4.html">2.2.4.测试服务车辆管理</a></li>
 				</dl>
 				<dl class="yin">
 					<dt>2.3.客户信息管理<i class="fa fa-angle-down" style="font-size:24px"></i></dt>
-					<dd><a href="javascript:;" _link="iframe2.html">2.3.客户信息管理</a></dd>
+					<li><a href="javascript:;" _link="iframe2.html">2.3.客户信息管理</a></li>
 				</dl>
 				<dl class="yin">
 					<dt>2.4.测试业务管理<i class="fa fa-angle-down" style="font-size:24px"></i></dt>
-					<dd><a href="javascript:;" _link="iframe2.html">2.4.测试业务管理</a></dd>
+					<li><a href="javascript:;" _link="iframe2.html">2.4.测试业务管理</a></li>
 				</dl>
 			</div>
 			
@@ -64,21 +63,21 @@
 			<div class="left_menu" style="display:none">
 				<dl class="yin">
 					<dt>1.主视图功能<i class="fa fa-angle-down" style="font-size:24px"></i></dt>
-					<dd><a href="javascript:;" _link="iframe1.html">3.1.1.GIS基础功能</a></dd>
-					<dd><a href="javascript:;" _link="iframe2.html">3.1.2.园区基础设施显示</a></dd>
-					<dd><a href="javascript:;" _link="iframe2.html">3.1.3.信号灯信息显示</a></dd>
-					<dd><a href="javascript:;" _link="iframe3.html">3.1.4.雷达、摄像头信息显示</a></dd>
-					<dd><a href="javascript:;" _link="iframe4.html">3.1.5.路侧网联设备信息显示</a></dd>
+					<li><a href="javascript:;" _link="iframe1.html">3.1.1.GIS基础功能</a></li>
+					<li><a href="javascript:;" _link="iframe2.html">3.1.2.园区基础设施显示</a></li>
+					<li><a href="javascript:;" _link="iframe2.html">3.1.3.信号灯信息显示</a></li>
+					<li><a href="javascript:;" _link="iframe3.html">3.1.4.雷达、摄像头信息显示</a></li>
+					<li><a href="javascript:;" _link="iframe4.html">3.1.5.路侧网联设备信息显示</a></li>
 				</dl>
 				<dl class="yin">
 					<dt>2.测试场景展示<i class="fa fa-angle-down" style="font-size:24px"></i></dt>
-					<dd><a href="javascript:;" _link="iframe1.html">3.2.1.测试场景展示</a></dd>
+					<li><a href="javascript:;" _link="iframe1.html">3.2.1.测试场景展示</a></li>
 				</dl>
 				<dl class="yin">
 					<dt>3.大数据统计图表<i class="fa fa-angle-down" style="font-size:24px"></i></dt>
-					<dd>3.3.1.基础统计信息板块</dd>
-					<dd>3.3.2.网联交互统计信息板块</dd>
-					<dd>3.3.3.应用场景统计信息板块</dd>
+					<li>3.3.1.基础统计信息板块</li>
+					<li>3.3.2.网联交互统计信息板块</li>
+					<li>3.3.3.应用场景统计信息板块</li>
 				</dl>
 			</div>
 			
@@ -96,14 +95,14 @@
 		$(".nav").on("click","dt",function(){
 			if($(this).find("i").hasClass("fa-angle-down")){
 				$(".nav i").removeClass("fa-angle-up").addClass("fa-angle-down");
-				$(".nav dd").slideUp(100);
+				$(".nav li").slideUp(100);
 				$(this).find("i").removeClass("fa-angle-down").addClass("fa-angle-up");
-				$(this).parent().find("dd").slideDown(100);
+				$(this).parent().find("li").slideDown(100);
 				
 				$(".nav dt").removeClass("bgblack");
 				$(this).addClass("bgblack");
 			}else{
-				$(".nav dd").slideUp(100);
+				$(".nav li").slideUp(100);
 				$(this).find("i").removeClass("fa-angle-up").addClass("fa-angle-down");
 			}
 		});
@@ -111,10 +110,9 @@
 		
 		
 		//link
-		$(".nav").on("click","dd",function(){
-			$(".nav dd").removeClass("bgf0f0f0");
+		$(".nav").on("click","li",function(){
+			$(".nav li").removeClass("bgf0f0f0");
 			$(this).addClass("bgf0f0f0");
-			
 			var _link = $(this).find("a").attr("_link");
 			$("#main").attr("src",_link);
 		})
