--- a/WebContent/system/login.html
+++ b/WebContent/system/login.html
@@ -92,5 +92,14 @@
 	  delay: 100,
 	})
 
+	//<-  enter
+	document.onkeydown=function(event){
+		console.log(1);
+    	var e = event || window.event || arguments.callee.caller.arguments[0];
+    	if(e && e.keyCode==13){ // enter 键
+        	$(".submit_btn").trigger("click");
+    	}
+    }
+
 </script>
 </html>
