--- a/WebContent/system/html/main.html
+++ b/WebContent/system/html/main.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="../css/font-awesome.css" />
 		<link rel="stylesheet" href="../css/main.css" />
 		<script src="../js/jquery-3.3.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../js/main.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
 		<!--top 开始-->
@@ -36,7 +37,7 @@
 		
 		<!--左边导航开始-->
 		<div class="nav">
-			<div class="left_menu">
+			<!--<div class="left_menu">
 				<dl class="yin">
 					<dt>2.1.权限管理<i class="fa fa-angle-down" style="font-size:24px"></i></dt>
 					<li><a href="javascript:;" _link="iframe2.html">2.1权限管理</a></li>
@@ -79,7 +80,7 @@
 					<li>3.3.2.网联交互统计信息板块</li>
 					<li>3.3.3.应用场景统计信息板块</li>
 				</dl>
-			</div>
+			</div>-->
 			
 		</div>
 		<!--左边导航结束-->
