--- a/WebContent/system/vue/vue2.0/复制 vue3-6样式绑定.html
+++ b/WebContent/system/vue/vue2.0/复制 vue3-6样式绑定.html
@@ -80,21 +80,35 @@
 //			arr = [1,2,3];  
 //			const arr = []; 
 
-			var obj = {};
-			var arr = [1,2,3,4,5,2,3,3,3,3,3];
-			for(var i=0;i<arr.length;i++){
-				var v = arr[i];
-				if(obj[v]&&obj[v].value==v){
-					 obj[v].count = ++ obj[v].count;
-				}else{
-					obj[v] = {};
-					obj[v].count = 1;
-					obj[v].value = v;
-				}
-			}
-			console.dir(obj);
+//			var obj = {};
+//			var arr = [1,2,3,4,5,2,3,3,3,3,3];
+//			for(var i=0;i<arr.length;i++){
+//				var v = arr[i];
+//				if(obj[v]&&obj[v].value==v){
+//					 obj[v].count = ++ obj[v].count;
+//				}else{
+//					obj[v] = {};
+//					obj[v].count = 1;
+//					obj[v].value = v;
+//				}
+//			}
+//			console.dir(obj);
 //			for(key in obj){
 //				console.log(key+":"+obj[key].value+":"+obj[key].count);
+//			}
+			
+			
+			
+			
+			
+//			const items = [['name', '张三'],['title', 'Author']];
+//			var map = new Map();
+//			items.forEach(([key,value])=>map.set(key,value));
+//			console.dir(map);
+//			console.log(map);
+//			
+//			for(let key of map.entries()){
+//				console.log(key);
 //			}
 			
 	</script>
