--- a/WebContent/system/vue/vue2.0/vue5-1vue中CSS动画原理.html
+++ b/WebContent/system/vue/vue2.0/vue5-1vue中CSS动画原理.html
@@ -8,10 +8,26 @@
 		<style>
 			/* 可以设置不同的进入和离开动画 */
 			/* 设置持续时间和动画函数 */
-			.fades-enter-active, .fades-leave-active {
+/*			.fades-enter-active, .fades-leave-active {
 			  transition: opacity .5s;
 			}
 			.fades-enter, .fades-leave-to {
+			  opacity: 0;
+			}
+			*/
+			
+			
+			/* 可以设置不同的进入和离开动画 */
+			/* 设置持续时间和动画函数 */
+			.fades-enter-active {
+			  transition: all .3s ease;
+			}
+			.fades-leave-active {
+			  transition: all .8s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+			}
+			.fades-enter
+			/* .slide-fade-leave-active for below version 2.1.8 */ {
+			  transform: translateX(10px);
 			  opacity: 0;
 			}
 		</style>
