--- a/WebContent/system/vue/vue2.0/vue3-4计算属性，方法，侦听器.html
+++ b/WebContent/system/vue/vue2.0/vue3-4计算属性，方法，侦听器.html
@@ -21,8 +21,8 @@
 					fullname:"Dell lee",//第三种
 					age:28
 				},
-				//1、计算属性,内置缓存   vm.age=22    有变化才执行
-//				computed:{
+				//1、计算属性,内置缓存   vm.age=22    有变化才执行     效率高有缓存
+//				computed:{ 
 //					fullname:function(){
 //						console.log("计算了一次")
 //						return this.firstname+" "+this.lastname
