--- a/WebContent/system/vue/vue2.0/vue4-6在Vue中使用插槽-重要.html
+++ b/WebContent/system/vue/vue2.0/vue4-6在Vue中使用插槽-重要.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>vue4-6在Vue中使用插槽slot 具名插槽  父给子传slot，子用插槽    //父给子组件传html代码 	</title>
+		<title>vue4-6、、给子组件传内容、、在Vue中使用插槽slot 具名插槽  父给子传slot，子用插槽    //父给子组件传html代码 	</title>
 		<title>$emit $on Vue.prototype.bus = new Vue()</title>
 		<script src="vue.js" type="text/javascript" charset="utf-8"></script>
 	</head>
@@ -17,9 +17,9 @@
 		<script type="text/javascript">
 			Vue.component('child',{
 				template:`<div>
-							<slot name="footer">ddd</slot>
+							<slot name="footer">默认内容1</slot>
 							<div>content</div>
-							<slot name="header">ddd</slot>
+							<slot name="header">默认内容</slot>
 						</div>`
 						
 			})
