--- a/WebContent/system/DongHua/canvas.html
+++ b/WebContent/system/DongHua/canvas.html
@@ -3,9 +3,12 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>canvas绘制动画</title>
-    <script type="text/javascript" src="canvas.js"></script>
+    <!--<script type="text/javascript" src="canvas.js"></script>-->
+    <script src="../js/jquery.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="canvas_faceobject.js"></script>
 </head>
-<body onload="draw('canvas')">
+<body onload="Tool.drawfuc()">
+<body >
 <canvas id="canvas" width="800" height="200"></canvas>
 </body>
 </html>
