--- a/WebContent/system/DongHua/canvas.html
+++ b/WebContent/system/DongHua/canvas.html
@@ -7,8 +7,9 @@
     <script src="../js/jquery.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="canvas_faceobject.js"></script>
 </head>
-<body onload="Tool.drawfuc()">
+<!--<body onload="Tool.drawfuc()">-->
 <body >
 <canvas id="canvas" width="800" height="200"></canvas>
+<button onclick="chngespeed()">change</button>
 </body>
 </html>
