--- a/WebContent/system/tree.html
+++ b/WebContent/system/tree.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>HTML5实现彩色大树生长动画</title>
+<title>树</title>
 
-<script type="text/javascript" src="../jquery.js"></script>
+<script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript">
 (function ($) {
 	var Vector = function (x, y) {
