--- a/WebContent/统计最多字符.html
+++ b/WebContent/统计最多字符.html
@@ -17,9 +17,11 @@ for(var i=0;i<str.length;i++){
         obj[v].value = v;
     }
 }
+
 for(key in obj){
     document.write(obj[key].value +'='+obj[key].count+'&nbsp;'); // a=4  b=3  c=4  d=2  f=1  g=1  h=1 
 } 
+console.log(obj);
 </script>
 <body>
 
