--- a/WebContent/game/game1faceobj.html
+++ b/WebContent/game/game1faceobj.html
@@ -100,7 +100,8 @@
 			b.stop.call(b);
 			b.timeonefunction(500);
 			setTimeout(function(){
-				b.stop.call(b);
+//				b.stop.call(b);
+				b.stop();
 			},4000);
 		}
 		
