--- a/WebContent/system/vue/vue2.0/复制 vue4-2父子组件传值02.html
+++ b/WebContent/system/vue/vue2.0/复制 vue4-2父子组件传值02.html
@@ -42,5 +42,19 @@
 					}
 				}
 			});
+			var vm = new Vue({
+				el:'#root',
+				data:{
+					total:5
+				},
+				components:{
+					counter:counter
+				}
+				methods:{
+					incfunction:function(num){
+						this.total+=num;
+					}
+				}
+			})
 	</script>
 </html>
