--- a/WebContent/ES5/dom01.html
+++ b/WebContent/ES5/dom01.html
@@ -12,5 +12,26 @@
 		var sp = document.createElement("span");
 		sp.innerHTML = "i am span";
 		div.appendChild(sp);
+		
+		
+//		首先，要明确几个点：
+//1.在JS里，万物皆对象。方法（Function）是对象，方法的原型(Function.prototype)是对象。因此，它们都会具有对象共有的特点。
+//即：对象具有属性__proto__，可称为隐式原型，一个对象的隐式原型指向构造该对象的构造函数的原型，这也保证了实例能够访问在构造函数原型中定义的属性和方法。
+//
+//2.方法(Function)
+//方法这个特殊的对象，除了和其他对象一样有上述_proto_属性之外，还有自己特有的属性——原型属性（prototype），这个属性是一个指针，指向一个对象，
+//这个对象的用途就是包含所有实例共享的属性和方法（我们把这个对象叫做原型对象）。原型对象也有一个属性，叫做constructor，这个属性包含了一个指针，指回原构造函数。
+
+
+性能!
+1.避免全局查找  document.getElementById()
+2.避免不必要的属性查找         
+var values = {first:5,second:6}
+var sum = values.first + values.second;
+console.log(sum);
+3.优化循环
+4.
+
+
 	</script>
 </html>
