--- a/WebContent/ES5/dom01.html
+++ b/WebContent/ES5/dom01.html
@@ -30,7 +30,17 @@ var values = {first:5,second:6}
 var sum = values.first + values.second;
 console.log(sum);
 3.优化循环
-4.
+4.避免双重解释
+5.原生的c++/c方法快
+6.switch语句快
+7.位运算快
+
+8.多个变量声明
+9.使用数组和对象字面量
+优化dom操作
+1.最小化现场更新appendChild()
+2.使用innerHTML比appendChild快,createElement()快,注意别在循环中写,一次调用快的多.
+3.使用事件代理
 
 
 	</script>
