--- a/WebContent/ES5/dom01.html
+++ b/WebContent/ES5/dom01.html
@@ -12,8 +12,18 @@
 		var sp = document.createElement("span");
 		sp.innerHTML = "i am span";
 		div.appendChild(sp);
-		
-		
+
+什么是函数提升?
+js中创建函数有两种方式：函数声明式和函数字面量式。只有函数声明才存在函数提升！如:
+console.log(f1); // function f1() {}    函数提升，
+console.log(f2); // undefined  
+function f1() {}
+var f2 = function() {}
+
+什么是闭包?
+闭包是一种形式，内部函数可以访问其所在的外部函数中声明的参数和变量，因为变量被引用着所以不会被回收
+
+prototype和__proto__什么区别		
 //		首先，要明确几个点：
 //1.在JS里，万物皆对象。方法（Function）是对象，方法的原型(Function.prototype)是对象。因此，它们都会具有对象共有的特点。
 //即：对象具有属性__proto__，可称为隐式原型，一个对象的隐式原型指向构造该对象的构造函数的原型，这也保证了实例能够访问在构造函数原型中定义的属性和方法。
@@ -41,6 +51,13 @@ console.log(sum);
 1.最小化现场更新appendChild()
 2.使用innerHTML比appendChild快,createElement()快,注意别在循环中写,一次调用快的多.
 3.使用事件代理
+
+ajax技术解决了什么问题?
+1、最大的一点是页面无刷新，在页面内与服务器通信，给用户的体验非常好。
+2、使用异步方式与服务器通信，不需要打断用户的操作，具有更加迅速的响应能力。
+3、可以把以前一些服务器负担的工作转嫁到客户端，利用客户端闲置的能力来处理，
+减轻服务器和带宽的负担，节约空间和宽带租用成本。并且减轻服务器的负担，
+ajax的原则是“按需取数据”，可以最大程度的减少冗余请求，和响应对服务器造成的负担。
 
 
 	</script>
