--- a/WebContent/ES5/chouse-machine选择器.html
+++ b/WebContent/ES5/chouse-machine选择器.html
@@ -9,6 +9,8 @@
 	<script>
 一,js 获取元素(父节点,子节点,兄弟节点)
 	var test = document.getElementById("test");
+	document.getElementsByClassName("testclass");
+	var oCanvas=document.querySelector('canvas')
 　　var parent = test.parentNode; // 父节点
 　　var chils = test.childNodes; // 全部子节点
 　　var first = test.firstChild; // 第一个子节点
