--- a/WebContent/ES5/dom01.html
+++ b/WebContent/ES5/dom01.html
@@ -44,7 +44,6 @@ console.log(sum);
 5.原生的c++/c方法快
 6.switch语句快
 7.位运算快
-
 8.多个变量声明
 9.使用数组和对象字面量
 优化dom操作
@@ -59,6 +58,21 @@ ajax技术解决了什么问题?
 减轻服务器和带宽的负担，节约空间和宽带租用成本。并且减轻服务器的负担，
 ajax的原则是“按需取数据”，可以最大程度的减少冗余请求，和响应对服务器造成的负担。
 
+
+Position
+absolute，生成绝对定位的元素，相对于 static 定位以外的第一个父元素进行定位；
+
+元素的位置通过 "left", "top", "right" 以及 "bottom" 属性进行规定；
+
+fixed，生成绝对定位的元素，相对于浏览器窗口进行定位；
+
+元素的位置通过 "left", "top", "right" 以及 "bottom" 属性进行规定。
+
+relative，生成相对定位的元素，相对于其正常位置进行定位；
+
+static，默认值，没有定位，元素出现在正常的流中（忽略 top, bottom, left, right 或者 z-index 声明）；
+
+inherit，规定应该从父元素继承 position 属性的值。
 
 	</script>
 </html>
