--- a/WebContent/system/vue/vue2.0/vue4-2父子组件传值02.html
+++ b/WebContent/system/vue/vue2.0/vue4-2父子组件传值02.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div id="root">
-			<counter :count="2" @inc="handleIncrease"></counter><!--父组件给子组件传至，通过属性传值-->
+			<counter :count="2" @inc="handleIncrease"></counter>
 			<counter :count="3" @inc="handleIncrease"></counter>
 			
 			<div>{{total}}</div>
