--- a/WebContent/ES5/forEach.html
+++ b/WebContent/ES5/forEach.html
@@ -11,6 +11,15 @@
 	//3个参数，1为值，2为索引，3为本身
 });
 
+//for  in
+var config = {
+    star_r : 3,
+    star_alpha : 5,
+};
 
+for(var item in config){
+    console.log(item);//键
+    console.log(config[item]);//值
+}
 	</script>
 </html>
